--- a/bdqn/html8/01 上机练习素材/练习2：带按钮的轮播广告/index.html
+++ b/bdqn/html8/01 上机练习素材/练习2：带按钮的轮播广告/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div>
+    <div class="loop">
         <img src="./images/adver-01.jpg" alt="" srcset="">
         <ul class="status">
             <li>1</li>
