--- a/bdqn/html8/02 作业素材/作业3：美食今日推荐/index.html
+++ b/bdqn/html8/02 作业素材/作业3：美食今日推荐/index.html
@@ -14,6 +14,7 @@
         </div>
         <div>
             <img src="./images/img9.gif" alt="">
+            <img src="./images/shen.png" alt="">
             <div>
                 <p><a href="#">汉来国际美食百货</a></p>
                 <p>口味：创意中餐</p>
