--- a/bdqn/html9/01 上机练习素材/练习4：QQ彩贝热销时装/index.html
+++ b/bdqn/html9/01 上机练习素材/练习4：QQ彩贝热销时装/index.html
@@ -10,38 +10,38 @@
 <body>
     <div class="content">
         <div>
-            <div>
-                <p></p>
-                <p></p>
+            <div class="nr">
+                <p>超级信用卡</p>
+                <p>线上线下课累计彩贝积分</p>
             </div>
             <img src="./images/1.bmp" alt="">
         </div>
         <div>
             <div>
                 <div>
-                    <p></p>
-                    <p></p>
+                    <p>彩贝抢霸</p>
+                    <p>每天10点更新</p>
                 </div>
                 <img src="./images/2.bmp" alt="">
             </div>
             <div>
                 <div>
-                    <p></p>
-                    <p></p>
+                    <p>热门优惠劵</p>
+                    <p>全场免费领取</p>
                 </div>
                 <img src="./images/3.bmp" alt="">
             </div>
             <div>
                 <div>
-                    <p></p>
-                    <p></p>
+                    <p>促销活动</p>
+                    <p>汇集全网优惠</p>
                 </div>
                 <img src="./images/4.bmp" alt="">
             </div>
             <div>
                 <div>
-                    <p></p>
-                    <p></p>
+                    <p>精挑细选</p>
+                    <p>给你最好的选择</p>
                 </div>
                 <img src="./images/5.bmp" alt="">
             </div>
