--- a/bdqn/oneShop/index.html
+++ b/bdqn/oneShop/index.html
@@ -70,11 +70,8 @@
                     <div>浏览历史</div>
                     <span>清空</span>
                 </div>
-                <div>
-                    
-                </div>
             </div>
-            <div clss="items">
+            <div class="items">
                 <div class="title">
                     <div class="btns">
                         <div>默认</div>
