--- a/bdqn/oneShop/index.html
+++ b/bdqn/oneShop/index.html
@@ -70,6 +70,14 @@
                     <div>浏览历史</div>
                     <span>清空</span>
                 </div>
+                <div class="his-list">
+                    <div>
+                        <img src="./img/his_1.jpg" alt="" srcset="">
+                        <p class="text-red">
+                            ￥368.00
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="items">
                 <div class="title">
@@ -82,6 +90,9 @@
                     <div>
                         共发现<span id="product-count">120</span>件
                     </div>
+                </div>
+                <div class="itmes-list">
+
                 </div>
             </div>
         </div>
