--- a/bdqn/oneShop/index.html
+++ b/bdqn/oneShop/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="product-list">
             <div class="history">
-                <div class="title">
+                <div class="caption">
                     <div>浏览历史</div>
                     <span>清空</span>
                 </div>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="items">
-                <div class="title">
+                <div class="caption">
                     <div class="btns">
                         <div>默认</div>
                         <div>销量</div>
@@ -91,8 +91,61 @@
                         共发现<span id="product-count">120</span>件
                     </div>
                 </div>
-                <div class="itmes-list">
-
+                <div class="items-list">
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class=""><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
