--- a/bdqn/oneShop/index.html
+++ b/bdqn/oneShop/index.html
@@ -140,7 +140,79 @@
                     <div class="item">
                         <img src="./img/per_1.jpg" alt="">
                         <p class="text-oranger">￥198.00</p>
-                        <p class=""><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
+                        <div class="btns">
+                            <div>收藏</div>
+                            <div>加入购物车</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/per_1.jpg" alt="">
+                        <p class="text-oranger">￥198.00</p>
+                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
                         <div class="btns">
                             <div>收藏</div>
                             <div>加入购物车</div>
