--- a/bdqn/oneShop/searchList.html
+++ b/bdqn/oneShop/searchList.html
@@ -221,6 +221,16 @@
                 </div>
             </div>
         </div>
+        <div class="page">
+            <div class="active">1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>...</div>
+            <div>4</div>
+            <div>9</div>
+            <div>10</div>
+            <div class="netx">&gt;</div>
+        </div>
     </section>
 </body>
 </html>
