one shop update

--- a/bdqn/oneShop/searchList.html
+++ b/bdqn/oneShop/searchList.html
@@ -6,64 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./css/search.css">
+    <script src="./js/listData.js"></script>
+    <script src="./js/dom.js" async></script>
 </head>
 <body class="search">
     <section>
         <div class="breadcrumb">
             <a href="#">全部</a>&gt;<a href="#">珠宝饰品</a>&gt;<a href="#">珍珠项链</a>&gt;<span id="brand">品牌<a href="#">珠韵首饰</a></span>
         </div>
-        <div class="nav-list">
-            <div>
-                <div>品牌</div>
-                <div>
-                    <a href="#">01</a>
-                    <a href="#">02</a>
-                    <a href="#">03</a>
-                    <a href="#">04</a>
-                    <a href="#">05</a>
-                </div>
-            </div>
-            <div>
-                <div>02</div>
-                <div>
-                    <a href="#">01</a>
-                    <a href="#">02</a>
-                    <a href="#">03</a>
-                    <a href="#">04</a>
-                    <a href="#">05</a>
-                </div>
-            </div>
-            <div>
-                <div>03</div>
-                <div>
-                    <a href="#">01</a>
-                    <a href="#">02</a>
-                    <a href="#">03</a>
-                    <a href="#">04</a>
-                    <a href="#">05</a>
-                </div>
-            </div>
-            <div>
-                <div>04</div>
-                <div>
-                    <a href="#">01</a>
-                    <a href="#">02</a>
-                    <a href="#">03</a>
-                    <a href="#">04</a>
-                    <a href="#">05</a>
-                </div>
-            </div>
-            <div>
-                <div>05</div>
-                <div>
-                    <a href="#">01</a>
-                    <a href="#">02</a>
-                    <a href="#">03</a>
-                    <a href="#">04</a>
-                    <a href="#">05</a>
-                </div>
-            </div>
-        </div>
+        <!-- Nav List -->
+        <div class="nav-list"></div>
         <div class="product-list">
             <div class="history">
                 <div class="caption">
@@ -71,12 +23,7 @@
                     <span>清空</span>
                 </div>
                 <div class="his-list">
-                    <div>
-                        <img src="./img/his_1.jpg" alt="" srcset="">
-                        <p class="text-red">
-                            ￥368.00
-                        </p>
-                    </div>
+                    
                 </div>
             </div>
             <div class="items">
@@ -92,141 +39,7 @@
                     </div>
                 </div>
                 <div class="items-list">
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/per_1.jpg" alt="">
-                        <p class="text-oranger">￥198.00</p>
-                        <p class="title"><a href="#">海瞳7-8mm水滴形天然珍珠项链</a></p>
-                        <div class="btns">
-                            <div>收藏</div>
-                            <div>加入购物车</div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
